--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "postinstall": "npm install --legacy-peer-deps",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -23,8 +24,8 @@
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^7.5.3",
     "react-swipeable-views": "^0.14.0",
     "sweetalert2": "^11.19.1",
@@ -35,7 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -45,7 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.6",
     "vite": "^6.3.1",
     "vite-plugin-babel": "^1.3.1"
   }
