--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.503.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^7.5.3",
-    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views": "0.14.0",
     "sweetalert2": "^11.19.1",
     "tailwind": "^2.3.1"
   },
