--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "aos": "^2.3.4",
     "firebase": "^11.6.1",
     "flowbit": "^0.1.0",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.503.0",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.3",
-    "react-swipeable-views": "0.14.0",
+    "react-swipeable-views": "^0.14.0",
     "sweetalert2": "^11.19.1",
     "tailwind": "^2.3.1"
   },
